# chineseocr-lite-ncnn

./: .gitmodules  CMakeLists.txt  README.md
include/: RRLib.h  ocr.h  polygon.h
models/: shufflenetv2_05_angle.param
src/: RRLib.cpp  main.cpp  ocr.cpp
